Fix maven-sso-admin CI: missing Redis testcontainer, unordered map
SsoAdminIntegrationTest booted the full context without a real
Redis, so every RoleLookupService/AppAccessService cache call threw
(19 test errors) and the health aggregate went DOWN (503 instead of
200). The test only passed locally by accident when a dev's own
docker-compose Redis happened to be running on the default port.
Wires in a GenericContainer<Redis> via @DynamicPropertySource,
mirroring the pattern already used in AuthCenterIntegrationTest.

Separately, RoleLookupService.nameToId/nameToIdFiltered built their
result with Map.copyOf, which has unspecified iteration order, even
though nameToIdFiltered's javadoc promises insertion order. Switched
both to a LinkedHashMap collector so the implementation matches its
documented contract.

sso-admin verify: 169/169 tests passing (was 22 failing).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>